# macbook-scripts

./: pyproject.toml
bash/: CloneAll.sh  EnvSetup.sh
